# internal/api/controllers/user_controller_model.go
@@ -21,3 +21,20 @@ type UserResponseDTO struct {
 	Email     string `json:"email" example:"jimmy@example.com"`
 	CreatedAt string `json:"createdAt" example:"2023-01-01T00:00:00Z"`
 }
+
+type PaginationRequest struct {
+	Page  int `json:"page" query:"page" validate:"min=1" example:"1"`
+	Limit int `json:"limit" query:"limit" validate:"min=1,max=100" example:"10"`
+}
+
+type PaginationResponse struct {
+	Page       int `json:"page" example:"1"`
+	Limit      int `json:"limit" example:"10"`
+	TotalItems int `json:"totalItems" example:"25"`
+	TotalPages int `json:"totalPages" example:"3"`
+}
+
+type UserListResponseDTO struct {
+	Users      []UserResponseDTO  `json:"users"`
+	Pagination PaginationResponse `json:"pagination"`
+}
